syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.clinic.appointment.proto";

package appointment;

// Messages
message CreateAppointmentRequest {
  string patientId = 1;
  string patientName = 2;
  string doctorId = 3;
  string doctorName = 4;
  string specialty = 5;
  string appointmentDate = 6;
  string description = 7;
}

message AppointmentResponse {
  string id = 1;
  string patientId = 2;
  string patientName = 3;
  string doctorId = 4;
  string doctorName = 5;
  string specialty = 6;
  string appointmentDate = 7;
  string status = 8;
  string description = 9;
  string createdAt = 10;
}

message AppointmentListResponse {
  repeated AppointmentResponse appointments = 1;
}

message GetAppointmentRequest {
  string id = 1;
}

message ListAppointmentsRequest {}

message CancelAppointmentRequest {
  string id = 1;
  string reason = 2;
}

message GetAppointmentsByPatientRequest {
  string patientId = 1;
}

message GetAppointmentsByDoctorRequest {
  string doctorId = 1;
}

message Empty {}

// Service
service AppointmentService {
  rpc CreateAppointment(CreateAppointmentRequest) returns (AppointmentResponse);
  rpc GetAppointment(GetAppointmentRequest) returns (AppointmentResponse);
  rpc ListAppointments(ListAppointmentsRequest) returns (AppointmentListResponse);
  rpc GetAppointmentsByPatient(GetAppointmentsByPatientRequest) returns (AppointmentListResponse);
  rpc GetAppointmentsByDoctor(GetAppointmentsByDoctorRequest) returns (AppointmentListResponse);
  rpc CancelAppointment(CancelAppointmentRequest) returns (AppointmentResponse);
}

